# ChangeLog for app-editors/xmlcopyeditor
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/xmlcopyeditor/ChangeLog,v 1.11 2008/10/24 21:13:39 pvdabeel Exp $

*xmlcopyeditor-1.2.0.2-r1 (10 Oct 2008)

  24 Oct 2008; Pieter Van den Abeele <pvdabeel@gentoo.org> xmlcopyeditor-1.2.0.2-r1.ebuild:
  Keyworded ~ppc. Closes bug #229311

  10 Oct 2008; Jose Luis Rivero <yoswink@gentoo.org>
  -xmlcopyeditor-1.2.0.2.ebuild, +xmlcopyeditor-1.2.0.2-r1.ebuild:
  Add missing dependencies as per bug #239629

*xmlcopyeditor-1.2.0.2 (02 Sep 2008)

  02 Sep 2008; Jose Luis Rivero <yoswink@gentoo.org>
  -files/gcc-4.3-header-dependency.patch, -xmlcopyeditor-1.1.0.7.ebuild,
  +xmlcopyeditor-1.2.0.2.ebuild:
  Version bump. Much faster background validation for DTDs and more readable
  parser error messages. It also fixes a number of minor bugs. Ebuild now
  introduces the dependency over wxGTK with X support. Remove old ebuild.

*xmlcopyeditor-1.2.0.1 (12 Aug 2008)

  12 Aug 2008; Jose Luis Rivero <yoswink@gentoo.org>
  -xmlcopyeditor-1.2.0.ebuild, +xmlcopyeditor-1.2.0.1.ebuild:
  Version bump to fix compilation issues explained in #234242 thanks to Roy
  Bamford <neddyseagoon@gentoo.org>. Remove old 1.2.0

  28 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

*xmlcopyeditor-1.2.0 (16 Jul 2008)

  16 Jul 2008; Jose Luis Rivero <yoswink@gentoo.org>
  -xmlcopyeditor-1.1.0.6.ebuild, +xmlcopyeditor-1.2.0.ebuild:
  Version bump. Introduces background validation. Don't need gcc-4.3 patch
  anymore. Remove old ebuild

  04 Jul 2008; Jose Luis Rivero <yoswink@gentoo.org>
  +files/gcc-4.3-header-dependency.patch, xmlcopyeditor-1.1.0.6.ebuild,
  xmlcopyeditor-1.1.0.7.ebuild:
  Make the application to compile with gcc-4.3 series thanks to patch by Ian
  Abbott <ian@abbott.org> in #230731

*xmlcopyeditor-1.1.0.7 (03 Jul 2008)
