@@ -4,5 +4,6 @@ DIST xmlcopyeditor-1.2.0.1.tar.gz 2232784 RMD160 cec1d4dc2e67f486f7416ba9aae37fc
 DIST xmlcopyeditor-1.2.0.2.tar.gz 2233862 RMD160 2d33cb889e45060c5d1f255191ee1177886c40b0 SHA1 c79d5206c443b639e40600b929f8b0fe6ede7c70 SHA256 c8be0b3ef8533ea3dc5aae475fa153b60901b84174e92f2d7542a0a19200a718
 EBUILD xmlcopyeditor-1.2.0.1.ebuild 1161 RMD160 1738333f9f9b0c1687fda1bb2b7e237bde076337 SHA1 3e7165ced08d0cedbb2131e8cc21ad8df62c67f6 SHA256 b3e65adad5d2815761a63c921521567f9ea03b7b5c007144c599d360dcd1f3eb
 EBUILD xmlcopyeditor-1.2.0.2-r1.ebuild 1241 RMD160 5963be7e5f5836512c3c73320aebfdfeb6235f0d SHA1 cef69e878a4cb406efcf3b72b75f1ddf5e00daff SHA256 06e03f8bf618f05d9c250493fe2350142e3b4552fc87b05cd6b1d7f90aabcda5
-MISC ChangeLog 2934 RMD160 adb6183e65e7df7c613754abe9fa5345c83c35f9 SHA1 8fd3235660f58ac12c04bb2c4ffbfbd3cf1066e7 SHA256 0adbc40b291b80647bf471832f48ee39e5f7f99f9f1e03234c55191a5701075b
+EBUILD xmlcopyeditor-1.2.0.2-r2.ebuild 1280 RMD160 d6a74d9076e534728f901aa23fcef9d65ed229f3 SHA1 52226d469c1942f14781ad828414434ba941d31c SHA256 a76da8bd06d33b51d2f622dcc37cf66711747ab7cb1b4774d763b2c8859080dd
+MISC ChangeLog 3208 RMD160 ae33a90124bb17e1adaa36e3c88396afb45a9686 SHA1 0297dd4dbc476088d2074966841ad1636e6aed90 SHA256 fcc9364a88cf4302de0e485039c658a0a4e7f895626b9a0ecd78a4e2a65e62da
 MISC metadata.xml 432 RMD160 21b0ee84d332e5c9f355a64bcea27c81d22a7c81 SHA1 5334d050333b76098864a10aff2fe072c8b028bb SHA256 307328ae58a8f85f24f64a229910e7ed58336a1349405dbeabfbd2646281c028
