@@ -1,6 +1,13 @@
 # ChangeLog for app-editors/xmlcopyeditor
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/xmlcopyeditor/ChangeLog,v 1.11 2008/10/24 21:13:39 pvdabeel Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/xmlcopyeditor/ChangeLog,v 1.12 2009/04/29 18:58:32 yoswink Exp $
+
+*xmlcopyeditor-1.2.0.2-r2 (29 Apr 2009)
+
+  29 Apr 2009; Jose Luis Rivero <yoswink@gentoo.org>
+  +xmlcopyeditor-1.2.0.2-r2.ebuild:
+  New revision. New dependency on libxml2-2.7.3-r1, see bug #264176 for
+  details. Ebuild migrated to EAPI 2 format. Explicit RDEPEND = DEPEND.
 
 *xmlcopyeditor-1.2.0.2-r1 (10 Oct 2008)
 
